# Pieces

./: .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  build_llvm12.sh  copy_dependencies.sh  docker_create.sh  requirements.txt  set_environment.sh
ansible/: ec-playbook.yml  ec-playbook1.yml  playbook-01.yml
binary_matcher/: dispatch.py  math_func_parser.py  requirements.txt  semantic_output.txt  semantic_output_parser.py
binary_matcher/SVF/: CMakeLists.txt  build.sh  tags
binary_matcher/SVF/tools/DisPatch/: CMakeLists.txt  Makefile  dispatch.cpp
binary_matcher/data/: All-memory-mapping.csv  Copter_output.txt  copter.cfg  copter.csv  copter_augdump.elf  copter_augdump.elf.idb  copter_augdump.elf_all.csv  copter_augdump.elf_functionRange.txt  i_ctrl.json  p2_ctrl.json  p_ctrl.json  pid_controller.json  pidff_controller.json  quick_check.py  rav_generic.txt
binary_matcher/firm_proc_util/: arm_bin2elf.py  arm_bin2elf_template.elf  firm_slicer.py  firm_upload.py
binary_matcher/ida/: headless.py
binary_matcher/mathpid/: ASTGenerator.py  README.md  auto_search.py  standard_output.py
bridge/: lib_bridge.c
compat/FreeRTOS/: FreeRTOS_checked.h  FreeRTOS_checked_compat.c  FreeRTOS_safe_translate.h
monitors/armv7-m/: memory_iso.c
monitors/x86/: memory_iso.c
partitioner/: .env  Makefile  cache.py  classify.py  classify_multi.py  init_files.sh  risky.py  run.py  stats.py  transform_driver.py
partitioner/ec_loader/: __init__.py  firmware.py
partitioner/frontend/: __init__.py  cfe_parser.py
(+257 files in other folders)
